remove custom exceptions